#Nmap Changelog ($Id$); -*-text-*-

o Fixed an issue with the parallel forward DNS resolver: it had not been
  consulting /etc/hosts, nor did it correctly handle the 'localhost' name.

Nmap 7.96 [2025-05-01]

o Upgraded included libraries: OpenSSL 3.0.16, Lua 5.4.7, libssh2 1.11.1,
  libpcap 1.10.5, libpcre2 10.45

o [Windows] Upgraded the included version of Npcap from version 1.79 to the
  latest version 1.82, bringing faster packet injection, VLAN header capture,
  and support for SR-IOV adapters, along with many other bug fixes and feature
  enhancements described at https://npcap.com/changelog

o [GH#1451] Nmap now performs forward DNS lookups in parallel, using the same
  engine that has been reliably performing reverse-DNS lookups for nearly a
  decade. Scanning large lists of hostnames is now enormously faster and avoids
  the unresponsive wait for blocking system calls, so progress stats can be
  shown. In testing, resolving 1 million website names to both IPv4 and IPv6
  took just over an hour. The previous system took 49 hours for the same data
  set! [Daniel Miller]

o [Nping][GH#2862] Promoted Nping version number from a 0.7.95 alpha release to
  the same release version as Nmap.

o [Zenmap][GH#2358] Added dark mode, accessed via Profile->Toggle Dark Mode or
  window::dark_mode in zenmap.conf. [Daniel Miller]

o [NSE] Added 3 new scripts, for a total of 612 NSE scripts:

  + [GH#2973] mikrotik-routeros-version queries MikroTik's WinBox router admin
    service to get the RouterOS version. New service probes were also added for
    this service. [deauther890, Daniel Miller]

  + mikrotik-routeros-username-brute brute-forces WinBox usernames for the
    router using CVE-2024-54772. [deauther890]

  + targets-ipv6-eui64 generates target IPv6 addresses from a user-provided
    file of MAC addresses, using the EUI-64 method. [Daniel Miller]

o [GH#2982] Fixed an issue preventing the Nmap OEM 7.95 uninstaller from
  correctly uninstalling Nmap OEM.
