@@ -1,0 +1,12 @@
+#!/bin/bash
+
+#script_path=$0
+#package_path=$1
+target_path=$2
+#target_vol=$3
+
+pkg_name=${INSTALL_PKG_SESSION_ID##*.}
+
+echo "$2/$pkg_name.app/Contents/Resources/bin" > /etc/paths.d/$INSTALL_PKG_SESSION_ID
+
+exit 0
