@@ -123,10 +123,10 @@
 /* Edit this definition only within the quotes, because it is read from this
    file by the makefiles. */
 #define NMAP_MAJOR 7
-#define NMAP_MINOR 96
-#define NMAP_BUILD 1
+#define NMAP_MINOR 97
+#define NMAP_BUILD 0
 /* SVN, BETA, etc. */
-#define NMAP_SPECIAL "SVN"
+#define NMAP_SPECIAL ""
 
 #define NMAP_VERSION STR(NMAP_MAJOR) "." STR(NMAP_MINOR) NMAP_SPECIAL
 #define NMAP_NUM_VERSION STR(NMAP_MAJOR) "." STR(NMAP_MINOR) "." STR(NMAP_BUILD) ".0"
