@@ -265,7 +265,7 @@
 /* General tunable defines  **************************************************/
 #define NPING_NAME "Nping"
 #define NPING_URL "https://nmap.org/nping"
-#define NPING_VERSION "0.7.96SVN"
+#define NPING_VERSION "0.7.97"
 
 
 #define DEFAULT_VERBOSITY VB_0
